--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,20 @@ NetCore.PDF.to.PNG.Single.Example/.vs/NetCore.PDF.to.PNG.Single.Example/v16/Serv
 NetCore.PDF.to.PNG.Single.Example/.vs/NetCore.PDF.to.PNG.Single.Example/v16/Server/sqlite3/storage.ide
 NetCore.PDF.to.PNG.Single.Example/.vs/NetCore.PDF.to.PNG.Single.Example/v16/Server/sqlite3/storage.ide-shm
 NetCore.PDF.to.PNG.Single.Example/.vs/NetCore.PDF.to.PNG.Single.Example/v16/Server/sqlite3/storage.ide-wal
+NetCore.PDF.to.PNG.Single.Example/NetCore.PDF.to.PNG.Single.Example/obj/Debug/netcoreapp3.1/NetCore.PDF.to.PNG.Single.Example.pdb
+NetCore.PDF.to.PNG.Single.Example/NetCore.PDF.to.PNG.Single.Example/obj/Debug/netcoreapp3.1/NetCore.PDF.to.PNG.Single.Example.exe
+NetCore.PDF.to.PNG.Single.Example/NetCore.PDF.to.PNG.Single.Example/obj/Debug/netcoreapp3.1/NetCore.PDF.to.PNG.Single.Example.dll
+NetCore.PDF.to.PNG.Single.Example/NetCore.PDF.to.PNG.Single.Example/obj/Debug/netcoreapp3.1/NetCore.PDF.to.PNG.Single.Example.csproj.FileListAbsolute.txt
+NetCore.PDF.to.PNG.Single.Example/NetCore.PDF.to.PNG.Single.Example/obj/Debug/netcoreapp3.1/NetCore.PDF.to.PNG.Single.Example.csproj.CopyComplete
+NetCore.PDF.to.PNG.Single.Example/NetCore.PDF.to.PNG.Single.Example/NetCore.PDF.to.PNG.Single.Example.csproj
+NetCore.PDF.to.PNG.Single.Example/NetCore.PDF.to.PNG.Single.Example/bin/Debug/netcoreapp3.1/RestSharp.dll
+NetCore.PDF.to.PNG.Single.Example/NetCore.PDF.to.PNG.Single.Example/bin/Debug/netcoreapp3.1/Newtonsoft.Json.dll
+NetCore.PDF.to.PNG.Single.Example/NetCore.PDF.to.PNG.Single.Example/bin/Debug/netcoreapp3.1/NetCore.PDF.to.PNG.Single.Example.runtimeconfig.json
+NetCore.PDF.to.PNG.Single.Example/NetCore.PDF.to.PNG.Single.Example/bin/Debug/netcoreapp3.1/NetCore.PDF.to.PNG.Single.Example.runtimeconfig.dev.json
+NetCore.PDF.to.PNG.Single.Example/NetCore.PDF.to.PNG.Single.Example/bin/Debug/netcoreapp3.1/NetCore.PDF.to.PNG.Single.Example.pdb
+NetCore.PDF.to.PNG.Single.Example/NetCore.PDF.to.PNG.Single.Example/bin/Debug/netcoreapp3.1/NetCore.PDF.to.PNG.Single.Example.exe
+NetCore.PDF.to.PNG.Single.Example/NetCore.PDF.to.PNG.Single.Example/bin/Debug/netcoreapp3.1/NetCore.PDF.to.PNG.Single.Example.dll
+NetCore.PDF.to.PNG.Single.Example/NetCore.PDF.to.PNG.Single.Example/bin/Debug/netcoreapp3.1/NetCore.PDF.to.PNG.Single.Example.deps.json
+NetCore.PDF.to.PNG.Single.Example/NetCore.PDF.to.PNG.Single.Example/bin/Debug/netcoreapp3.1/JsonSubTypes.dll
+NetCore.PDF.to.PNG.Single.Example/NetCore.PDF.to.PNG.Single.Example/bin/Debug/netcoreapp3.1/Cloudmersive.APIClient.NETCore.DocumentAndDataConvert.dll
+NetCore.PDF.to.PNG.Single.Example/.vs/NetCore.PDF.to.PNG.Single.Example/DesignTimeBuild/.dtbcache
