--- a/NetCore.PDF.to.PNG.Single.Example/NetCore.PDF.to.PNG.Single.Example/NetCore.PDF.to.PNG.Single.Example.csproj
+++ b/NetCore.PDF.to.PNG.Single.Example/NetCore.PDF.to.PNG.Single.Example/NetCore.PDF.to.PNG.Single.Example.csproj
@@ -5,4 +5,8 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Cloudmersive.APIClient.NETCore.DocumentAndDataConvert" Version="1.5.6" />
+  </ItemGroup>
+
 </Project>
