--- a/NetCore.PDF.to.PNG.Single.Example/NetCore.PDF.to.PNG.Single.Example/NetCore.PDF.to.PNG.Single.Example.csproj
+++ b/NetCore.PDF.to.PNG.Single.Example/NetCore.PDF.to.PNG.Single.Example/NetCore.PDF.to.PNG.Single.Example.csproj
@@ -6,7 +6,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Cloudmersive.APIClient.NETCore.DocumentAndDataConvert" Version="1.5.6" />
+    <PackageReference Include="Cloudmersive.APIClient.NETCore.Barcode" Version="1.2.6" />
+    <PackageReference Include="Cloudmersive.APIClient.NETCore.DocumentAndDataConvert" Version="1.7.0" />
+    <PackageReference Include="Cloudmersive.APIClient.NETCore.NLP" Version="1.3.0" />
   </ItemGroup>
 
 </Project>
